# Harmony

./: build-profile.json5
entry/src/main/cpp/: CMakeLists.txt  PluginManager.cpp  PluginManager.h  napi_init.cpp  utilCallJs.cpp  utilCallJs.h
entry/src/main/cpp/common/: log_common.h
entry/src/main/cpp/plugin/: plugin_manager.cpp
entry/src/main/cpp/samples/: sample_bitmap.cpp  sample_bitmap.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/pages/: Index.ets
